Updated titles of html files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!--character set to tell browser which characters are used -->
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- sets the width of the page to follow the screen width and set inital zoom level -->
-  <title>Alex's first page.</title>
+  <title>Portfolio of Alex Offner - Home</title>
   <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
