--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       I am Alex Offner. I am currently learning <span>web</span> development on Career Foundry.
     </p>
     <div class='link__shake'>
-      <a href="https://www.google.com/" target="_blank" class="link__animation">Have a look at the projects I am working on</a>
+      <a href="work.html" target="_blank" class="link__animation">Have a look at the projects I am working on</a>
     </div>
   </div>
   <footer class='page-footer'>
