--- a/work.html
+++ b/work.html
@@ -47,12 +47,12 @@
     <h1>My work</h1>
     <div class="grid">
       <div class="grid__item">
-        <h2>Portfolio of Alexander Offner</h2>
+        <h2>Portfolio of Lilian Ho</h2>
         <p>
-          For this project I was responisble for the frontend. I also created the HTML and CSS layout.
+          For this project I was responisble for the frontend. I also created the HTML and CSS layout
         </p>
         <div class='link__shake'>
-          <a href="https://github.com/Iconoclast17/portfolio-webside">Have a look at the project on GitHub</a>
+          <a href="#">Have a look at the project on GitHub</a>
         </div>
       </div>
       <div class="grid__item">
