--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
   </div><br>
   <div>
     <h1>Send me a short message</h1>
-    <form action="" method="post" id="contact-form">
+    <form action="#" method="post" id="contact-form">
 
       <label class="standard-label" for="contact-name">Your name: </label>
       <input type="text" id="contact-name" required>
@@ -77,11 +77,11 @@
   <footer class='page-footer'>
     <p>Find me on</p>
     <div class='social-media'>
-      <a href="#" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
+      <a href="https://github.com/Iconoclast17" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
       <!--placeholder link-->
       <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
       <!--placeholder link-->
-      <a href="#" target="_blank"><img src="img/linkedin-logo.svg" alt="LinkedIn logo" class='img__shake'></a>
+      <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg" alt="LinkedIn logo" class='img__shake'></a>
       <!--placeholder link-->
     </div>
   </footer>
