Added padding to html pages

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       </ul>
     </nav>
   </header>
-  <main class="about__layout">
+  <main class="main__layout">
     <h1>About myself:</h1>
     <p>My name is Alexander Offner and I recently started studying Web Development with Career Foundry. I have a bachelor's degree in applied chemistry with a main focus on biochemistry. I am also a co-founder of the charity Salvate Canes e.V., an
       animal welfare organisation based in Germany. Coding, running and travelling are my passions and I also love playing tabletop role-playing games. Currently I am based in Vancouver, Canada but originally I am from Nuremberg, Germany. I am fluent
