--- a/contact.html
+++ b/contact.html
@@ -43,47 +43,49 @@
       </ul>
     </nav>
   </header>
-  <div>
-    Alexander Offner<br>
-    2831 East 46th Ave.<br>
-    V5S 1A8<br>
-    Canada<br>
-    <br>
-    Tel: <a href="tel:+16043671344">+1 (604) 367-1344</a><br>
-    Skype: <a href="skype:Iconoclast17">Iconoclast17</a><br>
-    <a href="mailto:alex.offner@googlemail.com?subject=You%20are%20hired">Alex.Offner@googlemail.com</a><br>
-  </div><br>
-  <div>
-    <h1>Send me a short message</h1>
-    <form action="#" method="post" id="contact-form">
+  <main class="main__layout">
+    <div>
+      Alexander Offner<br>
+      2831 East 46th Ave.<br>
+      V5S 1A8<br>
+      Canada<br>
+      <br>
+      Tel: <a href="tel:+16043671344">+1 (604) 367-1344</a><br>
+      Skype: <a href="skype:Iconoclast17">Iconoclast17</a><br>
+      <a href="mailto:alex.offner@googlemail.com?subject=You%20are%20hired">Alex.Offner@googlemail.com</a><br>
+    </div><br>
+    <div>
+      <h1>Send me a short message</h1>
+      <form action="#" method="post" id="contact-form">
 
-      <label class="standard-label" for="contact-name">Your name: </label>
-      <input type="text" id="contact-name" required>
+        <label class="standard-label" for="contact-name">Your name: </label>
+        <input type="text" id="contact-name" required>
 
-      <label class="standard-label" for="contact-email">E-mail: </label>
-      <input type="email" id="contact-email" required>
+        <label class="standard-label" for="contact-email">E-mail: </label>
+        <input type="email" id="contact-email" required>
 
-      <label class="standard-label" for="contact-tel">Telephone: </label>
-      <input type="tel" id="contact-tel">
+        <label class="standard-label" for="contact-tel">Telephone: </label>
+        <input type="tel" id="contact-tel">
 
-      <label class="standard-label" for="contact-message">Message: </label>
-      <textarea required maxlength="240" id="contact-message"></textarea>
+        <label class="standard-label" for="contact-message">Message: </label>
+        <textarea required maxlength="240" id="contact-message"></textarea>
 
-      <button type="button">Send message</button>
-      <button type="button" class="button__secondary">Secondary Button</button>
-    </form>
-  </div>
-  <br>
-  <footer class='page-footer'>
-    <p>Find me on</p>
-    <div class='social-media'>
-      <a href="https://github.com/Iconoclast17" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
-      <!--placeholder link-->
-      <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
-      <!--placeholder link-->
-      <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg" alt="LinkedIn logo" class='img__shake'></a>
-      <!--placeholder link-->
+        <button type="button">Send message</button>
+        <button type="button" class="button__secondary">Secondary Button</button>
+      </form>
     </div>
+    <br>
+  </main>
+    <footer class='page-footer'>
+      <p>Find me on</p>
+      <div class='social-media'>
+        <a href="https://github.com/Iconoclast17" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
+        <!--placeholder link-->
+        <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
+        <!--placeholder link-->
+        <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg" alt="LinkedIn logo" class='img__shake'></a>
+        <!--placeholder link-->
+      </div>
   </footer>
   <script src="js/tota11y.min.js"></script> <!-- tool to check accessibility -->
 </body>
