--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
       </ul>
     </nav>
   </header>
-  <section>
+  <section class="main__layout">
     <h1>My work</h1>
     <div class="grid">
       <div class="grid__item">
