Visual updates and sticky footer

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
       </tbody>
     </table>
     <br>
-    <a href="files/CV.pdf" target="_blank" class="button button__link">Have a look at my CV</a>
+    <a href="files/CV.pdf" target="_blank" class="button button__link" id="button__link__color">Have a look at my CV</a>
     <br>
     <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg10" width="680" height="340" viewBox="0 0 680 340"
@@ -1945,7 +1945,7 @@
       <!--placeholder link-->
     </div>
   </footer>
-  <script src="js/tota11y.min.js"></script> <!-- tool to check accessibility -->
+  <!-- <script src="js/tota11y.min.js"></script> tool to check accessibility -->
 </body>
 
 </html>
