--- a/work.html
+++ b/work.html
@@ -113,7 +113,7 @@
       <!--placeholder link-->
     </div>
   </footer>
-  <script src="js/tota11y.min.js"></script> <!-- tool to check accessibility -->
+  <!-- <script src="js/tota11y.min.js"></script> tool to check accessibility -->
 </body>
 
 </html>
