--- a/contact.html
+++ b/contact.html
@@ -46,16 +46,16 @@
   <main class="main__layout">
     <div>
       Alexander Offner<br>
-      2831 East 46th Ave.<br>
-      V5S 1A8<br>
-      Canada<br>
+      4 Privet Drive<br>
+      Surrey<br>
+      England<br>
       <br>
       Tel: <a href="tel:+16043671344">+1 (604) 367-1344</a><br>
       Skype: <a href="skype:Iconoclast17">Iconoclast17</a><br>
       <a href="mailto:alex.offner@googlemail.com?subject=You%20are%20hired">Alex.Offner@googlemail.com</a><br>
     </div><br>
     <div>
-      <h1>Send me a short message</h1>
+      <h1>Contact me here</h1>
       <form action="#" method="post" id="contact-form">
 
         <label class="standard-label" for="contact-name">Your name: </label>
@@ -67,11 +67,11 @@
         <label class="standard-label" for="contact-tel">Telephone: </label>
         <input type="tel" id="contact-tel">
 
+        <br>
         <label class="standard-label" for="contact-message">Message: </label>
         <textarea required maxlength="240" id="contact-message"></textarea>
 
         <button type="button">Send message</button>
-        <button type="button" class="button__secondary">Secondary Button</button>
       </form>
     </div>
     <br>
@@ -87,7 +87,7 @@
         <!--placeholder link-->
       </div>
   </footer>
-  <script src="js/tota11y.min.js"></script> <!-- tool to check accessibility -->
+  <!-- <script src="js/tota11y.min.js"></script> tool to check accessibility -->
 </body>
 
 </html>
