--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 
-<body>
+<body class="site">
   <header class='page-header'>
     <div>
       <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake'></a>
@@ -43,7 +43,7 @@
       </ul>
     </nav>
   </header>
-  <div class='profile'>
+  <div class='profile main__layout'>
     <img src="img/picture-alex-offner.png" class='profile__portrait' alt="picture of Alex Offner">
     <h1>Hi everybody</h1>
     <p>
@@ -64,7 +64,7 @@
       <!--placeholder link-->
     </div>
   </footer>
-  <script src="js/tota11y.min.js"></script> <!-- tool to check accessibility -->
+  <!-- <script src="js/tota11y.min.js"></script> tool to check accessibility -->
 </body>
 
 </html>
