--- a/work.html
+++ b/work.html
@@ -105,7 +105,7 @@
   <footer class='page-footer'>
     <p>Find me on</p>
     <div class='social-media'>
-      <a href="https://github.com/Iconoclast17" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
+      <a href="https://github.com/Alex-Offner/portfolio-website" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
       <!--placeholder link-->
       <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
       <!--placeholder link-->
