Adjusting logo size with screen width

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <!--character set to tell browser which characters are used -->
-  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- sets the width of the page to follow the screen width and set inital zoom level -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- sets the width of the page to follow the screen width and set inital zoom level -->
   <title>Portfolio of Alex Offner - Contact</title>
   <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -16,7 +16,7 @@
 <body>
   <header class='page-header'>
     <div>
-      <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake'></a>
+      <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake logo'></a>
     </div>
     <nav class='navigation-list page-header__item'>
       <ul role="menubar" class="navigation-list">
@@ -63,6 +63,7 @@
 
         <label class="standard-label" for="contact-email">E-mail: </label>
         <input type="email" id="contact-email" required>
+        <br>
 
         <label class="standard-label" for="contact-tel">Telephone: </label>
         <input type="tel" id="contact-tel">
