--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="site">
   <header class='page-header'>
     <div>
-      <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake'></a>
+      <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake logo'></a>
     </div>
     <nav class='navigation-list page-header__item'>
       <ul role="menubar" class="navigation-list">
