--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         </li>
         <li role="presentation">
           <div class='link__shake'>
-            <a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">This is me</a>
+            <a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active link">This is me</a>
           </div>
         </li>
         <li role="presentation">
