--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       </ul>
     </nav>
   </header>
-  <br>
+  <div>
   <main class="main__layout">
     <h1>About myself:</h1>
     <p>My name is Alexander Offner and I recently started studying Web Development with Career Foundry. I have a bachelor's degree in applied chemistry with a main focus on biochemistry. I am also a co-founder of the charity Salvate Canes e.V., an
@@ -1935,6 +1935,7 @@
       </g>
     </svg>
   </main>
+</div>
   <footer class='page-footer'>
     <p>Find me on</p>
     <div class='social-media'>
