Trying to fix safari issue

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
       </ul>
     </nav>
   </header>
-  <main class="main__layout">
+  <main class="main__layout profile">
     <div>
       Alexander Offner<br>
       4 Privet Drive<br>
