--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,8 @@
       </ul>
     </nav>
   </header>
-  <main class="main__layout profile">
+  <div>
+  <main class="main__layout">
     <div>
       Alexander Offner<br>
       4 Privet Drive<br>
@@ -77,6 +78,7 @@
     </div>
     <br>
   </main>
+</div>
     <footer class='page-footer'>
       <p>Find me on</p>
       <div class='social-media'>
