--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
         <label class="standard-label" for="contact-message">Message: </label>
         <textarea required maxlength="240" id="contact-message"></textarea>
 
-        <button type="button">Send message</button>
+        <button type="button" class="button">Send message</button>
       </form>
     </div>
     <br>
