Move nav from header tag to div tag

--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
 </head>
 
 <body class="site">
-  <header class='page-header'>
-    <div>
+  <header>
+    <div class='page-header'>
       <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake logo'></a>
+      <nav class='navigation-list page-header__item'>
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+            <div class='link__shake'>
+              <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active link">Home</a>
+            </div>
+          </li>
+          <li role="presentation">
+            <div class='link__shake'>
+              <a href="about.html" role="menuitem" class="navigation-list__item">This is me</a>
+            </div>
+          </li>
+          <li role="presentation">
+            <div class='link__shake'>
+              <a href='work.html' role="menuitem" class="navigation-list__item">Work</a>
+            </div>
+          </li>
+          <li role="presentation">
+            <div class='link__shake'>
+              <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+            </div>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav class='navigation-list page-header__item'>
-      <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-          <div class='link__shake'>
-            <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active link">Home</a>
-          </div>
-        </li>
-        <li role="presentation">
-          <div class='link__shake'>
-            <a href="about.html" role="menuitem" class="navigation-list__item">This is me</a>
-          </div>
-        </li>
-        <li role="presentation">
-          <div class='link__shake'>
-            <a href='work.html' role="menuitem" class="navigation-list__item">Work</a>
-          </div>
-        </li>
-        <li role="presentation">
-          <div class='link__shake'>
-            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-          </div>
-        </li>
-      </ul>
-    </nav>
   </header>
   <div class='profile main__layout'>
     <img src="img/picture-alex-offner.png" class='profile__portrait' alt="picture of Alex Offner">
