--- a/contact.html
+++ b/contact.html
@@ -14,34 +14,34 @@
 </head>
 
 <body>
-  <header class='page-header'>
-    <div>
+  <header>
+    <div class='page-header'>
       <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake logo'></a>
+      <nav class='navigation-list page-header__item'>
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+            <div class='link__shake'>
+              <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+            </div>
+          </li>
+          <li role="presentation">
+            <div class='link__shake'>
+              <a href="about.html" role="menuitem" class="navigation-list__item">This is me</a>
+            </div>
+          </li>
+          <li role="presentation">
+            <div class='link__shake'>
+              <a href='work.html' role="menuitem" class="navigation-list__item">Work</a>
+            </div>
+          </li>
+          <li role="presentation">
+            <div class='link__shake'>
+              <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
+            </div>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav class='navigation-list page-header__item'>
-      <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-          <div class='link__shake'>
-            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-          </div>
-        </li>
-        <li role="presentation">
-          <div class='link__shake'>
-            <a href="about.html" role="menuitem" class="navigation-list__item">This is me</a>
-          </div>
-        </li>
-        <li role="presentation">
-          <div class='link__shake'>
-            <a href='work.html' role="menuitem" class="navigation-list__item">Work</a>
-          </div>
-        </li>
-        <li role="presentation">
-          <div class='link__shake'>
-            <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
-          </div>
-        </li>
-      </ul>
-    </nav>
   </header>
   <main class="main__layout">
     <div>
@@ -77,16 +77,16 @@
     </div>
     <br>
   </main>
-    <footer class='page-footer'>
-      <p>Find me on</p>
-      <div class='social-media'>
-        <a href="https://github.com/Alex-Offner" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
-        <!--placeholder link-->
-        <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
-        <!--placeholder link-->
-        <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg" alt="LinkedIn logo" class='img__shake'></a>
-        <!--placeholder link-->
-      </div>
+  <footer class='page-footer'>
+    <p>Find me on</p>
+    <div class='social-media'>
+      <a href="https://github.com/Alex-Offner" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
+      <!--placeholder link-->
+      <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
+      <!--placeholder link-->
+      <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg" alt="LinkedIn logo" class='img__shake'></a>
+      <!--placeholder link-->
+    </div>
   </footer>
   <!-- <script src="js/tota11y.min.js"></script> tool to check accessibility -->
 </body>
