Add movie_app to work

--- a/work.html
+++ b/work.html
@@ -122,13 +122,26 @@
           </div>
         </div>
         <div class="grid__item">
-          <h2>Tabletop role-playing simulator</h2>
+          <h2>Movie App</h2>
           <p>
-            For this project I was responisble for the frontend. I also created
-            the HTML and CSS layout
+            This project shows the server-side component of a movies web
+            application. Users can create an account, log in and access movies,
+            directors, actors and genres. They can also create a list of
+            favourite movies. It was created with Node.js and Express and the
+            database was build in MongoDB.
           </p>
           <div class="link__shake">
-            <a href="#">Have a look at the project on GitHub</a>
+            <a href="https://github.com/Alex-Offner/movie_api"
+              >Have a look at the project on GitHub</a
+            >
+          </div>
+          <p class="center">or</p>
+          <div class="link__shake center">
+            <a
+              href="https://movie-app-alex-offner.herokuapp.com/"
+              target="_blank"
+              >Have a look at the live, hosted version on Heroku</a
+            >
           </div>
         </div>
         <div class="grid__item">
