--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <img src="img/picture-alex-offner.png" class='profile__portrait' alt="picture of Alex Offner">
     <h1>Hi everybody</h1>
     <p>
-      I am Alex Offner. I am currently learning <span>web</span> development on Career Foundry and The Odin Project.
+      I am Alex Offner. I am currently learning <span>web</span> development on Career Foundry and The Odin Project. I like to tests and create things. 
     </p>
     <div class='link__shake'>
       <a href="work.html" target="_blank" class="link__animation">Have a look at the projects I am working on</a>
