Update work page with pictures and newest app

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <!--character set to tell browser which characters are used -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- sets the width of the page to follow the screen width and set inital zoom level -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- sets the width of the page to follow the screen width and set inital zoom level -->
   <title>Portfolio of Alex Offner - Contact</title>
   <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -16,7 +17,9 @@
 <body>
   <header>
     <div class='page-header'>
-      <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake logo'></a>
+      <a href='index.html' class='page-header__item'><img src="img/logo.svg"
+          alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background"
+          role="link" class='img__shake logo'></a>
       <nav class='navigation-list page-header__item'>
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
@@ -36,7 +39,8 @@
           </li>
           <li role="presentation">
             <div class='link__shake'>
-              <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
+              <a href="contact.html" role="menuitem"
+                class="navigation-list__item navigation-list__item--active">Contact</a>
             </div>
           </li>
         </ul>
@@ -90,7 +94,7 @@
 
         <div>
           <br>
-          <button type="button" class="button">Send message</button>
+          <button type="button" id="enter-button">Send message</button>
         </div>
       </form>
     </div>
@@ -99,11 +103,13 @@
   <footer class='page-footer'>
     <p>Find me on</p>
     <div class='social-media'>
-      <a href="https://github.com/Alex-Offner" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
+      <a href="https://github.com/Alex-Offner" target="_blank"><img src="img/github-logo.svg" alt="Github logo"
+          class='img__shake'></a>
       <!--placeholder link-->
       <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
       <!--placeholder link-->
-      <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg" alt="LinkedIn logo" class='img__shake'></a>
+      <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg"
+          alt="LinkedIn logo" class='img__shake'></a>
       <!--placeholder link-->
     </div>
   </footer>
