--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 
 <body>
@@ -94,7 +94,7 @@
 
         <div>
           <br>
-          <button type="button" id="enter-button">Send message</button>
+          <button type="button">Send message</button>
         </div>
       </form>
     </div>
