Updated portfolio with chat app

--- a/work.html
+++ b/work.html
@@ -124,13 +124,16 @@
         </div>
       </div>
       <div class="grid__item">
-        <h2>Running tracker</h2>
+        <h2>ChatMeUp</h2>
+        <img src="img/ChatMeUp_app.PNG" class="work-pictures" alt="picture of ChatMeUp App">
         <p>
-          For this project I was responisble for the frontend. I also created
-          the HTML and CSS layout
+          This mobile chat app was developed with React Native. The app allows users to enter a common chat room, send
+          and recieve messages, take pictures and share their location. The platform Expo was used to test the native
+          app on Android and iOS devices. Gifted Chat, an React Native framework helped to set up the basic chat room.
+          The database Firebase helped to store messages and pictures online.
         </p>
-        <div class="link__shake">
-          <a href="#">Have a look at the project on GitHub</a>
+        <div class="link__shake center">
+          <a href="https://github.com/Alex-Offner/ChatMeUp">Have a look at the project on GitHub</a>
         </div>
       </div>
       <div class="grid__item">
